# malbox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  malbox.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2icph10axxk0q5qklr21gb5pcj73z9dx-source  32pyg4cz3wmzi8zx2n5xxmw5iwm3nv28-source  48kakvh4svylhg6j979ygrvkwfya5j5c-source  64pfpz85vdkrdxzh8k3pdncnrpbjx5v1-source  d1cb84akzmjsbmpjplfwr26n7zakpg75-source  (+15 more)
back-end/: Cargo.toml
backpkg/: Cargo.toml
configuration/: malbox.toml
front-end/: package.json  pnpm-lock.yaml
malbox-abi-common/: Cargo.toml
malbox-analysis/: Cargo.toml
malbox-ansible/: Cargo.toml
malbox-builder/: Cargo.toml
malbox-builder/src/: lib.rs  node_support_napi.rs  python_support.rs
malbox-cli/: Cargo.toml
malbox-cli/src/: commands.rs  error.rs  main.rs  modules.rs  types.rs  utils.rs
malbox-cli/src/commands/: builder.rs  completion.rs  config.rs  daemon.rs  downloader.rs  infra.rs
malbox-cli/src/commands/builder/: build.rs  init.rs  refine.rs  template.rs
malbox-cli/src/commands/config/: playbook.rs  validate.rs  vars.rs
malbox-cli/src/commands/daemon/: start.rs
malbox-cli/src/commands/downloader/: add_source.rs  download.rs  list_sources.rs  sources.rs
malbox-cli/src/commands/downloader/sources/: add.rs  list.rs
malbox-cli/src/commands/infra/: apply.rs  destroy.rs  import.rs  init.rs  plan.rs  show.rs
malbox-cli/src/modules/: builder.rs  daemon.rs
malbox-cli/src/utils/: progress.rs  validation.rs
malbox-cli/src/utils/interaction/: templates.rs
malbox-communication/: Cargo.toml
malbox-config/: Cargo.toml
malbox-config/src/: config.rs  core.rs  error.rs  lib.rs  machinery.rs  malbox.rs  profiles.rs  shared_types.rs  storage.rs  templates.rs  types.rs  utils.rs
malbox-config/src/core/: validation.rs
malbox-config/src/machinery/: kvm.rs  virtualbox.rs  vmware.rs
malbox-config/src/types/: macros.rs
malbox-core/: Cargo.toml
malbox-core/src/: api.rs  communication.rs  errors.rs  internal.rs  lib.rs  machinery.rs  manager.rs  modules.rs  node_plugin.rs  plugin.rs  plugins.rs  python_plugin.rs  registry.rs  types.rs
malbox-core/src/api/: compatibility.rs  v1.rs
malbox-core/src/communication/: common.rs  master.rs  plugin.rs
malbox-core/src/communication/ipc/: host.rs  plugin.rs
malbox-core/src/communication/ipc/host/: publisher.rs  subscriber.rs
malbox-core/src/communication/ipc/plugin/: publisher.rs  subscriber.rs
malbox-core/src/internal/plugin/: manager.rs  registry.rs
malbox-core/src/internal/plugin/registry/: discovery.rs  instance.rs  metadata.rs
malbox-core/src/machinery/: qemu.rs
malbox-core/src/manager/: state.rs
malbox-core/src/plugins/: manager.rs  registry.rs
malbox-core/src/plugins/registry/: discovery.rs  instance.rs  metadata.rs
malbox-core/src/tasks/: scheduler.rs
malbox-daemon/: Cargo.toml
malbox-daemon/src/: error.rs  lib.rs  main.rs
malbox-database/: .env  Cargo.toml
malbox-database/migrations/: 1_setup.sql  2_custom_types.sql  3_samples.sql  4_machines.sql  4_tasks.sql  5_machines.sql  5_tasks.sql  6_guests.sql  7_errors.sql
malbox-database/src/: error.rs  lib.rs  repositories.rs
malbox-database/src/repositories/: machinery.rs  samples.rs  tasks.rs
malbox-downloader/: Cargo.toml
malbox-downloader/src/: downloader.rs  error.rs  lib.rs  registry.rs
malbox-frontend/: package.json  tailwind.config.mjs
malbox-hashing/: Cargo.toml
malbox-hcl-utils/: Cargo.toml
malbox-http/: Cargo.toml
malbox-http/src/: http.rs  main.rs
malbox-http/src/http/: error.rs
malbox-http/src/http/tasks/: create.rs
malbox-infra/: Cargo.toml
malbox-infra/src/: builder.rs  command.rs  error.rs  lib.rs  packer.rs  parser.rs  playbook.rs  template.rs  terraform.rs  types.rs
malbox-infra/src/ansible/: inventory.rs  playbook.rs
malbox-infra/src/packer/: build.rs  parser.rs  templates.rs
malbox-infra/src/packer/templates/: manager.rs
malbox-infra/src/parser/: hcl_custom.rs  packer.rs  terraform.rs
malbox-infra/src/terraform/: manager.rs  state.rs  types.rs  workspace.rs
malbox-io-utils/: Cargo.toml
malbox-machinery/: Cargo.toml
malbox-machinery/src/: hypervisors.rs  lib.rs  machinery.rs  startup.rs
malbox-machinery/src/hypervisors/: libvirt.rs
malbox-machinery/src/machinery/: kvm.rs  qemu.rs
malbox-module-common/: Cargo.toml
malbox-module-manager/: Cargo.toml
malbox-packer/: Cargo.toml
malbox-plugin-api/: Cargo.toml
malbox-plugin-internal/: Cargo.toml
malbox-plugin-macros/: Cargo.toml
malbox-plugin-manager/: Cargo.toml
malbox-plugin-utils/: Cargo.toml
malbox-processor/: Cargo.toml
malbox-resources/: Cargo.toml
malbox-resources/src/: allocation.rs  error.rs  lib.rs  types.rs  vm.rs
malbox-resources/src/vm/: allocation.rs  manager.rs
malbox-scheduler/: Cargo.toml
malbox-scheduler/src/: error.rs  lib.rs  resource.rs  scheduler.rs  task.rs  worker.rs
malbox-scheduler/src/task/: batch.rs  coordinator.rs  executor.rs  notification.rs  queue.rs  storage.rs  store.rs  worker.rs
malbox-scheduler/src/worker/: config.rs  event.rs  handle.rs  job.rs  pool.rs
malbox-server/: .env  Cargo.toml
malbox-server/migrations/: 2_status_type.sql  3_samples.sql  4_tasks.sql
malbox-server/src/: actor.rs  config.rs  http.rs  main.rs  repositories.rs  router.rs  scheduler.rs
malbox-server/src/http/: error.rs  submissions.rs
malbox-server/src/http/submissions/: create.rs
malbox-server/src/http/tasks/: create.rs
malbox-server/src/repositories/: samples_repository.rs  tasks_repository.rs
malbox-shared/: Cargo.toml
malbox-storage/: Cargo.toml
malbox-storage/src/: error.rs  lib.rs  paths.rs
malbox-terraform/: Cargo.toml
malbox-terraform/src/: error.rs  lib.rs  manager.rs  parser.rs  state.rs  workspace.rs
malbox-tracing/: Cargo.toml
modules/dummy_module/: Cargo.toml
modules/dummy_module/src/: lib.rs
plugins/dummy_plugin/: Cargo.toml
plugins/dummy_plugin/src/: lib.rs
(+111 files in other folders)
