[workspace]
resolver = "2"
members = [
    "malbox-config",
    "malbox-database",
    "malbox-hashing",
    "malbox-scheduler",
    "malbox-http",
    "malbox-storage",
    "malbox-tracing",
    "malbox-daemon",
    "malbox-cli",
    "malbox-infra",
    "malbox-downloader",
    "malbox-communication",
    "malbox-plugin-api",
    "malbox-plugin-internal",
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full", "fs"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
] }
serde = { version = "1.0.199", features = ["derive"] }
anyhow = { version = "1.0.82" }
thiserror = "2.0.9"
chrono = { version = "0.4.38", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
tracing = { version = "0.1.40" }
bon = "3.3.2"
magic = "0.16.2"
color-eyre = "0.6.3"
serde-inline-default = "0.2.3"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.9"
serde_json = "1.0.138"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
futures = "0.3.31"
tonic = "0.13.0"
semver = { version = "1.0.26", features = [ "serde" ] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }
iceoryx2 = { version = "0.5.0", features = [ "logger_tracing" ] }
