[package]
name = "malbox-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
malbox-daemon = { path = "../malbox-daemon" }
malbox-config = { path = "../malbox-config" }
malbox-infra = { path = "../malbox-infra" }
malbox-tracing = { path = "../malbox-tracing" }
anyhow = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bon = { workspace = true }
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
dialoguer = "0.11.0"
serde_yaml = "0.9.34"
serde_json = "1.0.137"
indicatif = "0.17.9"
