[package]
name = "malbox-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libloading = "0.8.5"
malbox-abi-common.path = "../malbox-abi-common"
petgraph = "0.6.5"
stabby = { workspace = true, features = ["libloading"] }
tracing.workspace = true
