[package]
name = "malbox-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
semver.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde_json.workspace = true
iceoryx2.workspace = true
iceoryx2-bb-container.version = "0.5.0"
malbox-plugin-api.path = "../malbox-plugin-api"
bincode = { version = "2.0.1", features = [ "serde" ] }
