[package]
name = "malbox-core"
version = "0.1.0"
edition = "2024"
description = "Core plugin system and communication infrastructure for Malbox"

# API Versions
api-v1 = []

[dependencies]
malbox-communication.path = "../malbox-communication"
tokio.workspace = true
tracing.workspace = true
semver.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde_json.workspace = true
bincode = { version = "2.0.1", features = [ "serde" ] }
async-trait = "0.1.88"
