[package]
name = "malbox-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
malbox-database = { path = "../malbox-database" }
malbox-hashing = { path = "../malbox-hashing" }
malbox-config = { path = "../malbox-config" }
malbox-scheduler = { path = "../malbox-scheduler" }
malbox-http = { path = "../malbox-http" }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
