[package]
name = "malbox-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-config = { path = "../malbox-config" }
bon.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
