[package]
name = "malbox-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = [ "stream" ] }
tokio = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
bon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1.17"
