[package]
name = "malbox-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-core = { path = "../malbox-core" }
malbox-database = { path = "../malbox-database" }
malbox-hashing = { path = "../malbox-hashing" }
malbox-config = { path = "../malbox-config" }
malbox-scheduler = { path = "../malbox-scheduler" }
malbox-tracing = { path = "../malbox-tracing" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7.5", features = ["multipart"] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.11.1"
dotenvy = "0.15.7"
serde_json = "1.0.116"
tempfile = "3.10.1"
thiserror = "1.0.59"
tower-http = { version = "0.5.2", features = ["trace"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }
magic = "0.16.2"
