[package]
name = "malbox-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-database = { path = "../malbox-database" }
malbox-hashing = { path = "../malbox-hashing" }
malbox-config = { path = "../malbox-config" }
malbox-scheduler = { path = "../malbox-scheduler" }
malbox-tracing = { path = "../malbox-tracing" }
malbox-machinery = { path = "../malbox-machinery" }
malbox-core = { path = "../malbox-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8.1", features = ["multipart"] }
axum-macros = "0.5.0"
axum_typed_multipart = "0.15.1"
dotenvy = "0.15.7"
serde_json = "1.0.116"
tempfile = "3.10.1"
thiserror = "2.0.9"
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }
magic = "0.16.2"
