[package]
name = "malbox-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
malbox-config = { path = "../malbox-config" }
malbox-database.path = "../malbox-database"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true }
chrono.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde_yaml = "0.9.34"
toml = "0.8.19"
hcl-rs = "0.18.3"
