[package]
name = "malbox-machinery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-config = { path = "../malbox-config" }
malbox-database = { path = "../malbox-database" }
tracing = { workspace = true }
anyhow = { workspace = true }
memfd-exec = "0.2.1"
# qemu = { version = "9.0.0-v0" }
virt = { version = "0.3.1", features = ["qemu"] }
