[package]
name = "malbox-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-database = { path = "../malbox-database" }
malbox-machinery = { path = "../malbox-machinery" }
malbox-config.path = "../malbox-config"
malbox-infra.path = "../malbox-infra"
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
