[package]
name = "malbox-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-database = { path = "../malbox-database" }
malbox-config.path = "../malbox-config"
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
time.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
