[package]
name = "malbox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malbox-shared = { path = "../malbox-shared" }
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["multipart"] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
] }
tempfile = "3.10.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }
magic = "0.16.2"
send_wrapper = "0.6.0"
