[package]
name = "malbox-terraform"
version = "0.1.0"
edition = "2024"

[dependencies]
malbox-database.path = "../malbox-database"
malbox-io-utils.path = "../malbox-io-utils"
malbox-hcl-utils.path = "../malbox-hcl-utils"
malbox-config.path = "../malbox-config"
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
