[package]
name = "dummy_module"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dummy_module"
crate-type = ["cdylib"]

[dependencies]
abi_stable = { default-features = false }
malbox-abi-common.path = "../../malbox-abi-common"
serde = "1.0.204"
