[package]
name = "dummy_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
name = "dummy_plugin"
crate-type = ["cdylib"]

[dependencies]
abi_stable = { default-features = false }
malbox-abi-common.path = "../../malbox-abi-common"
microvmi = { version = "0.3.14", features = ["kvm"] }
serde = "1.0.204"
