[package]
name = "dummy_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
name = "dummy_plugin"
crate-type = ["cdylib"]

[dependencies]
malbox-abi-common.path = "../../malbox-abi-common"
malbox-plugin-macros.path = "../../malbox-plugin-macros"
serde = "1.0.204"
stabby = "36.1.1"
